@@ -27,8 +27,8 @@ object Common {
     Seq(
       organization     := "com.github.tmtsoftware.esw",
       organizationName := "TMT Org",
-      dependencyOverrides += AkkaHttp.`akka-http-spray-json`,
-      dependencyOverrides += Libs.`slf4j-api`,
+//      dependencyOverrides += PekkoHttp.`pekko-http-spray-json`,
+//      dependencyOverrides += Libs.`slf4j-api`,
       scalaVersion := EswKeys.scalaVersion,
       scmInfo      := Some(ScmInfo(url(EswKeys.homepageValue), "git@github.com:tmtsoftware/esw.git")),
       // ======== sbt-docs Settings =========
@@ -36,6 +36,8 @@ object Common {
       docsParentDir  := EswKeys.projectName,
       gitCurrentRepo := "https://github.com/tmtsoftware/esw",
       // ================================
+      resolvers += "Apache Pekko Staging".at("https://repository.apache.org/content/groups/staging"),
+//      resolvers += "Apache Pekko Snapshots".at("https://repository.apache.org/content/groups/snapshots"),
       resolvers += "jitpack" at "https://jitpack.io",
       resolvers += Resolver.mavenLocal, // required to resolve kotlin `examples` deps published locally
       autoCompilerPlugins := true,
@@ -45,15 +47,9 @@ object Common {
         "-feature",
         "-unchecked",
         "-deprecation",
-        // -W Options
-        "-Wdead-code",
-        if (enableFatalWarnings) "-Wconf:any:error" else "-Wconf:any:warning-verbose",
-        // -X Options
-        "-Xlint:_,-missing-interpolator",
-        "-Xsource:3",
-        "-Xcheckinit",
-        "-Xasync"
-        // -Y options are rarely needed, please look for -W equivalents
+//        "-rewrite",
+//        "-source",
+//        "3.4-migration"
       ),
       licenses := Seq(("Apache-2.0", url("http://www.apache.org/licenses/LICENSE-2.0"))),
       Test / testOptions ++= reporterOptions,
@@ -61,12 +57,17 @@ object Common {
       // jitpack provides the env variable VERSION=<version being built> # A tag or commit. We have aliased VERSION to JITPACK_VERSION
       // we make use of it so that the version in class metadata (e.g. classOf[HttpService].getPackage.getSpecificationVersion)
       // and the maven repo match
-      version     := sys.env.getOrElse("JITPACK_VERSION", "0.1.0-SNAPSHOT"),
-      fork        := true,
+      version := sys.env.getOrElse("JITPACK_VERSION", "0.1.0-SNAPSHOT"),
+      fork    := true,
       javaOptions += "-Xmx2G",
-      Test / fork := false,
-      Test / javaOptions ++= Seq("-Dakka.actor.serialize-messages=on"),
-      cancelable in Global    := true, // allow ongoing test(or any task) to cancel with ctrl + c and still remain inside sbt
+      Test / fork := true,
+      Test / javaOptions ++= Seq(
+        "-Dpekko.actor.serialize-messages=on",
+        // These are needed when using jdk 21 and Blockhound
+        "-XX:+AllowRedefinitionToAddDeleteMethods",
+        "-XX:+EnableDynamicAgentLoading",
+      ),
+      Global / cancelable     := true, // allow ongoing test(or any task) to cancel with ctrl + c and still remain inside sbt
       scalafmtOnCompile       := true,
       unidocGenjavadocVersion := "0.18",
       commands += Command.command("openSite") { state =>
